Changelog:
Fix: In design class diagrams navigability and role names are used. Skip the stereotypes on dependencies
    Made new class diagram with navigability, role names , better overall.
Fix: MemberID should not be a hash:
    Created generateId() that deals with the id generation, checks if id is distinct. Deleted hash.
Fix: Save stuff and handle all of this encapsulated in the model
    Created saveBoatClubToJsonFile() in RegistryHandler that deals with the JSON writing in a nicer way while removing exposure to the controller.
Fix: There is view responsibility in model classes.
    Removed the view responsibility form the model classes.
Fix: There are hidden dependencies between view and controller
    Removed hidden dependency between view and controller.
Fix: Business logic in the UI.
    Removed business logic in the controller, now createUser() is much better.

Additional fixes for life of quality:
Created addBoatToMember() since it was missing.
Changed method name from printBoatArray() to boatArrayToString() since this is what it does and it was a naming inconsistency.
Changed all the functions in BoatClub(big fix) to search by id instead of personalNumber and made them with functional programming,
this improved readability greatly and shortened the number of lines.