@@ -17,3 +17,5 @@ Workshop 2/production/src/.idea/
 Workshop 2/production/
 
 Workshop 2/Workshop 2 Andrei Fixes.zip
+
+Workshop 2/
