@@ -1,58 +1,1 @@
-{
-  "membersArray": [
-    {
-      "boatArray": [
-        {
-          "length": 20,
-          "boatType": "SAILBOAT"
-        }
-      ],
-      "name": "Jameson",
-      "personalNumber": "199809221001",
-      "memberId": 100
-    },
-    {
-      "boatArray": [],
-      "name": "member",
-      "personalNumber": "199809221000",
-      "memberId": 555
-    },
-    {
-      "boatArray": [
-        {
-          "length": 222,
-          "boatType": "Sailboat"
-        }
-      ],
-      "name": "Hero",
-      "personalNumber": "199905239898",
-      "memberId": 323
-    },
-    {
-      "boatArray": [
-        {
-          "length": 22,
-          "boatType": "Kayak\/Canoe"
-        }
-      ],
-      "name": "dragomir",
-      "personalNumber": "199905239800",
-      "memberId": 272
-    },
-    {
-      "boatArray": [
-        {
-          "length": 10,
-          "boatType": "Sailboat"
-        },
-        {
-          "length": 1,
-          "boatType": "Sailboat"
-        }
-      ],
-      "name": "alpha",
-      "personalNumber": "199905239898",
-      "memberId": 905
-    }
-  ]
-}
+{"membersArray":[{"boatArray":[{"length":20,"boatType":"SAILBOAT"}],"name":"Jameson","personalNumber":"199809221001","memberId":100},{"boatArray":[],"name":"member","personalNumber":"199809221000","memberId":555},{"boatArray":[{"length":222,"boatType":"Sailboat"}],"name":"Hero","personalNumber":"199905239898","memberId":323},{"boatArray":[{"length":22,"boatType":"Kayak\/Canoe"}],"name":"dragomir","personalNumber":"199905239800","memberId":272},{"boatArray":[{"length":10,"boatType":"Sailboat"},{"length":85,"boatType":"Kayak\/Canoe"}],"name":"alpha","personalNumber":"199905239898","memberId":905}]}
