@@ -13,15 +13,13 @@ public class Act {
     private BoatClub boatClub = null;
     private UI ui;
 
-    private Scanner sc = new Scanner(System.in);
-
     public Act(UI ui) {
         this.ui = ui;
     }
 
     public void readChoice() throws Exception {
         this.ui.console();
-        int num = sc.nextInt();
+        int num = this.ui.scannerInt();
         switch (num) {
             case 1:
                 createUser();
@@ -74,32 +72,19 @@ public class Act {
 
     private void createUser() {
         System.out.print("Name: ");
-        String name = sc.next();
+        String name = this.ui.scannerString();
         System.out.println("Ex Personal Number '199905239898'");
         System.out.print("Personal Number: ");
-        String personalNumber = sc.next();
+        String personalNumber = this.ui.scannerString();
         int id = this.boatClub.generateId();
 
         System.out.println("You have to add your first boat, enter the boat details: ");
         this.ui.printBoatTypes();
         System.out.println("Type boat type: ");
-        String boatType = null;
-        switch (sc.nextInt()) {
-            case 1:
-                boatType = "Sailboat";
-                break;
-            case 2:
-                boatType = "Motorsailer";
-                break;
-            case 3:
-                boatType = "Kayak/Canoe";
-                break;
-            case 4:
-                boatType = "Other";
-                break;
-        }
+        String boatType = this.newBoatType(this.ui.scannerInt());
+
         System.out.println("Boat length in meters: ");
-        int boatLength = sc.nextInt();
+        int boatLength = this.ui.scannerInt();
         Boat boat = new Boat(boatType, boatLength);
         Member member = new Member(name, personalNumber, id, boat);
         this.boatClub.addMember(member);
@@ -111,13 +96,13 @@ public class Act {
 
     private void deleteUser() {
         System.out.println("Type member id: ");
-        this.boatClub.removeMember(sc.nextInt());
+        this.boatClub.removeMember(this.ui.scannerInt());
     }
 
     private void listAllMembers() {
         this.ui.printListTypes();
         System.out.println("Type list type: ");
-        switch (sc.nextInt()) {
+        switch (this.ui.scannerInt()) {
             case 1:
                 System.out.println(this.boatClub.compactListString());
                 break;
@@ -138,7 +123,7 @@ public class Act {
 
     private void lookAtMemberInfo() {
         System.out.println("Type the id of the member you want to look at: ");
-        int id = sc.nextInt();
+        int id = this.ui.scannerInt();
         System.out.println(this.boatClub.getMemberInfo(id));
     }
 
@@ -146,81 +131,62 @@ public class Act {
         this.ui.printChangesToMember();
         System.out.println("Your choice : ");
 
-        switch (sc.nextInt()) {
+        switch (this.ui.scannerInt()) {
             case 1:
                 System.out.println("Enter the members id: ");
-                int id = sc.nextInt();
+                int id = this.ui.scannerInt();
                 System.out.println("New name :");
-                this.boatClub.changeMemberName(id, sc.next());
+                this.boatClub.changeMemberName(id, this.ui.scannerString());
                 break;
             case 2:
                 System.out.println("Enter the members id: ");
-                int id2 = sc.nextInt();
+                int id2 = this.ui.scannerInt();
                 System.out.println("New personal number :");
-                this.boatClub.changeMemberPersonalNumber(id2, sc.next());
+                this.boatClub.changeMemberPersonalNumber(id2, this.ui.scannerString());
                 break;
         }
     }
 
     private void printDeleteBoat() {
         System.out.println("Type the id of the member you want to delete the boat from: ");
-        int id = sc.nextInt();
+        int id = this.ui.scannerInt();
         System.out.println("Type the boat pos: ");
-        int position = sc.nextInt();
+        int position = this.ui.scannerInt();
         this.boatClub.removeBoatFromMember(id, position);
     }
 
     private void printAddBoat() {
         System.out.println("Type the id of the member you want to add the boat to: ");
-        int id = sc.nextInt();
+        int id = this.ui.scannerInt();
         System.out.println("You have to enter the boat details: ");
         this.ui.printBoatTypes();
         System.out.println("Type boat type: ");
-        String boatType = null;
-        switch (sc.nextInt()) {
-            case 1:
-                boatType = "Sailboat";
-                break;
-            case 2:
-                boatType = "Motorsailer";
-                break;
-            case 3:
-                boatType = "Kayak/Canoe";
-                break;
-            case 4:
-                boatType = "Other";
-                break;
-        }
+        String boatType = this.newBoatType(this.ui.scannerInt());
         System.out.println("Boat length in meters: ");
-        int boatLength = sc.nextInt();
+        int boatLength = this.ui.scannerInt();
         Boat boat = new Boat(boatType, boatLength);
         this.boatClub.addBoatToMember(id, boat);
     }
 
     private void printChangeBoatInfo() {
         System.out.println("Type the id of the member you want to change the information: ");
-        int id = sc.nextInt();
+        int id = this.ui.scannerInt();
         System.out.println("Type the boat position: ");
-        int pos = sc.nextInt();
-        String newBoatType = null;
+        int pos = this.ui.scannerInt();
         System.out.println("Type new boat type: ");
         this.ui.printBoatTypes();
-        switch (sc.nextInt()) {
-            case 1:
-                newBoatType = "Sailboat";
-                break;
-            case 2:
-                newBoatType = "Motorsailer";
-                break;
-            case 3:
-                newBoatType = "Kayak/Canoe";
-                break;
-            case 4:
-                newBoatType = "Other";
-                break;
-        }
+        String boatType = this.newBoatType(this.ui.scannerInt());
         System.out.println("Type new boat length: ");
-        int newLength = sc.nextInt();
-        this.boatClub.changeBoatInfoFromMember(id, pos, newLength, newBoatType);
+        int newLength = this.ui.scannerInt();
+        this.boatClub.changeBoatInfoFromMember(id, pos, newLength, boatType);
+    }
+
+    private String newBoatType(int value){  //fancy java 12 preview features
+        return switch (value) {    //have to learn it somehow
+            case 1 : break "Sailboat";
+            case 2 : break "Motorsailer";
+            case 3 : break"Kayak/Canoe";
+            default: break "Other";
+        };
     }
 }
